[tool.poetry]
name = "another-random-forest-in-python"
version = "2020.6"
description = "Title says it all."
authors = ["Andrew Spittlemeister <andrew.spittlemeister@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1"
numpy = "^1"
jupyter = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
